@@ -5,8 +5,8 @@ import simplejson as json
 plugin = "PBS"
 __author__ = 'stacked <stacked.xbmc@gmail.com>'
 __url__ = 'http://code.google.com/p/plugin/'
-__date__ = '01-20-2013'
-__version__ = '3.0.10'
+__date__ = '02-28-2013'
+__version__ = '3.0.11'
 settings = xbmcaddon.Addon( id = 'plugin.video.pbs' )
 buggalo.SUBMIT_URL = 'http://www.xbmc.byethost17.com/submit.php'
 dbg = False
@@ -185,10 +185,10 @@ def build_search_directory( url, page ):
 
 @retry(TypeError)
 def find_videos( name, program_id, topic, page ):
-	if settings.getSetting("quality") == '0':
-		type = ['MPEG-4 500kbps', 'MP4 800k', HIGH]
+	if settings.getSetting("video") == '0':
+		type = ['MP4 800k', 'Legacy KIDS encoding', HIGH]
 	else:
-		type = [HIGH, 'MP4 800k', 'MPEG-4 500kbps' ]
+		type = [HIGH, 'MP4 800k', 'Legacy KIDS encoding']
 	start = str( 200 * page )
 	url = 'None'
 	backup_url = None
@@ -220,6 +220,7 @@ def find_videos( name, program_id, topic, page ):
 				thumb = 'None'
 			for videos in results['mediafiles']:
 				encoding[clean_type(videos['video_encoding']['name'])] = { 'url': videos['video_data_url'], 'backup_url': videos['video_download_url'] }
+			print encoding
 			cycle = 0
 			while cycle <= 2:
 				if type[cycle] in encoding:
@@ -255,6 +256,7 @@ def play_video( name, url, thumb, plot, studio, starttime, backup_url ):
 	print 'PBS - ' + studio + ' - ' + name
 	print url
 	playpath = False
+	defaulturl = url
 	
 	#Release Urls
 	if 'http://release.theplatform.com/' in url:
@@ -274,15 +276,6 @@ def play_video( name, url, thumb, plot, studio, starttime, backup_url ):
 		try:
 			base = re.compile( '<meta base="(.+?)" />' ).findall( data )[0]
 			src = re.compile( '<ref src="(.+?)" title="(.+?)" (author)?' ).findall( data )[0][0]
-		except:
-			print 'PBS - Release backup_url'
-			if backup_url != 'None':
-				url = backup_url
-				backup_url = 'None'
-			else:
-				url = 'None'
-				backup_url = 'None'
-		if url != 'None' and 'http://urs.pbs.org/redirect/' not in url:
 			if base == 'http://ad.doubleclick.net/adx/':
 				src_data = src.split( "&lt;break&gt;" )
 				url = src_data[0] + "mp4:" + src_data[1].replace('mp4:','')
@@ -291,6 +284,14 @@ def play_video( name, url, thumb, plot, studio, starttime, backup_url ):
 			else:
 				url = base
 				playpath = "mp4:" + src.replace('mp4:','')
+		except:
+			print 'PBS - Release backup_url'
+			if backup_url != 'None':
+				url = backup_url
+				backup_url = 'None'
+			else:
+				url = 'None'
+				backup_url = 'None'
 	
 	#Empty Urls
 	if url == 'None':
@@ -342,6 +343,7 @@ def play_video( name, url, thumb, plot, studio, starttime, backup_url ):
 		dialog = xbmcgui.Dialog()
 		ok = dialog.ok(plugin , settings.getLocalizedString( 30008 ))
 		ok = dialog.ok(plugin, settings.getLocalizedString( 30051 ))
+		buggalo.addExtraData('defaulturl', defaulturl)
 		buggalo.addExtraData('url', url)
 		buggalo.addExtraData('info', studio + ' - ' + name)
 		raise Exception("backup_url ERROR")
