@@ -19,7 +19,7 @@
 	<string id="30016">access to this content.</string>
 	<string id="30017">Preferred video quality:</string>
 	<string id="30018">2500k-1200k</string>
-	<string id="30019">800k-500k</string>
+	<string id="30019">800k</string>
 	<string id="30050">There was a connection error:</string>
 	<string id="30051">If this problem persists, please submit the error report.</string>
 	<string id="30052">Retry</string>
